--- a/composer.json
+++ b/composer.json
@@ -21,19 +21,19 @@
     }
   ],
   "require": {
-    "php": ">=7.4|<=8.2",
-    "ext-swoole": "^4",
-    "illuminate/console": ">=5.4",
-    "illuminate/contracts": ">=5.4",
-    "illuminate/http": ">=5.4",
-    "illuminate/support": ">=5.4",
-    "predis/predis": "^1.1",
-    "laravel/framework":"v5.4"
+    "php": "^8.1|^8.2|^8.3",
+    "ext-swoole": "^4|^5|^6",
+    "illuminate/console": "^10.0|^11.0",
+    "illuminate/contracts": "^10.0|^11.0",
+    "illuminate/http": "^10.0|^11.0",
+    "illuminate/support": "^10.0|^11.0",
+    "predis/predis": "^1.1|^2.0",
+    "laravel/framework": "^10.0|^11.0"
   },
   "require-dev": {
-    "laravel/lumen-framework": ">=5.4",
-    "phpunit/phpunit": ">=8.5",
-    "phpunit/php-code-coverage": ">=7.0",
+    "laravel/lumen-framework": "^10.0|^11.0",
+    "phpunit/phpunit": "^10.0|^11.0",
+    "phpunit/php-code-coverage": "^10.0|^11.0",
     "php-coveralls/php-coveralls": ">=2.1",
     "mockery/mockery": "^1.3",
     "codedungeon/phpunit-result-printer": "^0.31.0",
