--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,17 @@
     }
   ],
   "require": {
-    "php": "^8.1|^8.2|^8.3",
+    "php": "^8.2|^8.3",
     "ext-swoole": "^4|^5|^6",
-    "illuminate/console": "^10.0|^11.0",
-    "illuminate/contracts": "^10.0|^11.0",
-    "illuminate/http": "^10.0|^11.0",
-    "illuminate/support": "^10.0|^11.0",
+    "illuminate/console": "^10.0|^11.0|^12.0",
+    "illuminate/contracts": "^10.0|^11.0|^12.0",
+    "illuminate/http": "^10.0|^11.0|^12.0",
+    "illuminate/support": "^10.0|^11.0|^12.0",
     "predis/predis": "^1.1|^2.0",
-    "laravel/framework": "^10.0|^11.0"
+    "laravel/framework": "^10.0|^11.0|^12.0"
   },
   "require-dev": {
-    "laravel/lumen-framework": "^10.0|^11.0",
+    "laravel/lumen-framework": "^10.0|^11.0|^12.0",
     "phpunit/phpunit": "^10.0|^11.0",
     "phpunit/php-code-coverage": "^10.0|^11.0",
     "php-coveralls/php-coveralls": ">=2.1",
